--- a/package.json
+++ b/package.json
@@ -1,34 +1,19 @@
 {
-  "name": "miproyectoreact",
+  "name": "mi-frontend",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.9.0",
-    "cors": "^2.8.5",
-    "icons": "^1.0.0",
-    "react": "^19.1.0",
-    "react-calendar": "^5.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^6.30.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "eslint": "^9.22.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "rollup": "^4.44.0",
-    "vite": "^6.3.3"
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "vite": "^5.2.0"
   }
 }
