Conexión de frontend con backend vía Ngrok funcionando

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=https://tu-backend.ngrok-free.app
+VITE_API_BASE_URL=https://52fa-2800-e6-4010-39b6-dc0b-a1d4-197b-64e7.ngrok-free.app
+
