--- a/package.json
+++ b/package.json
@@ -4,30 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^6.14.0"
+    "vite": "^4.0.0"
   },
-  "devDependencies": {
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "vite": "^6.3.5"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/andreaserna13/mi_frontend_db.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/andreaserna13/mi_frontend_db/issues"
-  },
-  "homepage": "https://github.com/andreaserna13/mi_frontend_db#readme"
+  "devDependencies": {}
 }
+
