--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2",
-    "vite": "^4.0.0"
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.6.0"
+    "@vitejs/plugin-react": "^4.6.0",
+    "vite": "^4.5.0"
   }
 }
